--- a/grid.html
+++ b/grid.html
@@ -41,9 +41,9 @@ https://templatemo.com/tm-520-highway
         <div class="video-overlay"></div>
         <div class="video-content">
             <div class="inner">
-              <h1>Welcome to <em>Highway</em></h1>
-              <p>FREE CSS TEMPLATE by templatemo</p>
-              <p>Homepage with small-width image gallery</p>
+              <h1>BIENVENID@ A MI <em>GALERIA LA PEPITA</em></h1>
+              <p>DISEÑOS ONLINE by David Santiago Ordoñez</p>
+              <p>Pagina Web con Imagenes-Gifs Online descarry</p>
                 <div class="scroll-icon">
                     <a class="scrollTo" data-scrollTo="portfolio" href="#"><img src="img/scroll-icon.png" alt=""></a>
                 </div>    
