--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ https://templatemo.com/tm-520-highway
                             </div>
                         </div>
                         <div class="image">
-                            <img src="img/dibujar.png">
+                            <img src="img/descarga (1).png">
                         </div>
                     </div></a>
                 </div>
@@ -97,7 +97,7 @@ https://templatemo.com/tm-520-highway
                             </div>
                         </div>
                         <div class="image">
-                            <img src="img/mundo.png">
+                            <img src="img/descarga (2).png">
                         </div>
                     </div></a>
                 </div>
@@ -112,7 +112,7 @@ https://templatemo.com/tm-520-highway
                             </div>
                         </div>
                         <div class="image">
-                            <img src="img/columnas.png">
+                            <img src="img/descarga (3).png">
                         </div>
                     </div></a>
                 </div>
@@ -127,7 +127,7 @@ https://templatemo.com/tm-520-highway
                             </div>
                         </div>
                         <div class="image">
-                            <img src="img/mundo.png">
+                            <img src="descarga (4).png">
                         </div>
                     </div></a>
                 </div>
@@ -142,7 +142,7 @@ https://templatemo.com/tm-520-highway
                             </div>
                         </div>
                         <div class="image">
-                            <img src="img/portfolio_item_6.png">
+                            <img src="img/descarga (5).png">
                         </div>
                     </div></a>
                 </div>
@@ -157,7 +157,7 @@ https://templatemo.com/tm-520-highway
                             </div>
                         </div>
                         <div class="image">
-                            <img src="img/portfolio_item_7.png">
+                            <img src="descarga (6).png">
                         </div>
                     </div></a>
                 </div>
