--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@ https://templatemo.com/tm-520-highway
                     <a href="img/progKG01.png" data-lightbox="image-1"><div class="thumb">
                         <div class="hover-effect">
                             <div class="hover-content">
-                                <h1>Biodiesel <em>squid</em></h1>
-                                <p>Awesome Subtittle Goes Here</p>
+                                <h1>PELOTAS REBOTANTES <em>PEQUEÑAS</em></h1>
+                                <p>Programa que define una serie de pelotas en movimiento...</p>
                             </div>
                         </div>
                         <div class="image">
@@ -77,8 +77,8 @@ https://templatemo.com/tm-520-highway
                     <a href="img/big_portfolio_item_2.png" data-lightbox="image-1"><div class="thumb">
                         <div class="hover-effect">
                             <div class="hover-content">
-                                <h1>raclette <em>taxidermy</em></h1>
-                                <p>Awesome Subtittle Goes Here</p>
+                                <h1>CIRCULO<em>HORIZONTAL</em></h1>
+                                <p>Programa que define un circulo que realiza movimiento con una trayectoria horizontal...</p>
                             </div>
                         </div>
                         <div class="image">
@@ -92,8 +92,8 @@ https://templatemo.com/tm-520-highway
                     <a href="img/big_portfolio_item_3.png" data-lightbox="image-1"><div class="thumb">
                         <div class="hover-effect">
                             <div class="hover-content">
-                                <h1>humblebrag <em>brunch</em></h1>
-                                <p>Awesome Subtittle Goes Here</p>
+                                <h1>CONEJITO <em>KAWAII</em></h1>
+                                <p>Programa que define un dibujo de un conejo...</p>
                             </div>
                         </div>
                         <div class="image">
