--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@ https://templatemo.com/tm-520-highway
         <div class="video-overlay"></div>
         <div class="video-content">
             <div class="inner">
-              <h1>Welcome to <em>Highway</em></h1>
-              <p>FREE CSS TEMPLATE by templatemo</p>
-              <p>Homepage with full-width image gallery</p>
+              <h1>BIENVENIDO A MI REPOSITORIO <em>La Pepita</em></h1>
+              <p>GALERIA DE PROGRAMAS DE DAVID SANTIAGO ORDOÑEZ</p>
+              <p>PAGINA CON GALERIA COMPLETA</p>
                 <div class="scroll-icon">
                     <a class="scrollTo" data-scrollTo="portfolio" href="#"><img src="img/scroll-icon.png" alt=""></a>
                 </div>    
