--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ https://templatemo.com/tm-520-highway
                             </div>
                         </div>
                         <div class="image">
-                            <img src="img/portfolio_item_8.png">
+                            <img src="XD_360P.mp4">
                         </div>
                     </div></a>
                 </div>
@@ -187,7 +187,7 @@ https://templatemo.com/tm-520-highway
                             </div>
                         </div>
                         <div class="image">
-                            <img src="img/portfolio_item_9.png">
+                            <img src="cat.gif>
                         </div>
                     </div></a>
                 </div>
