--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ https://templatemo.com/tm-520-highway
                             </div>
                         </div>
                         <div class="image">
-                            <img src="cat.gif>
+                            <img src="img/cat.gif>
                         </div>
                     </div></a>
                 </div>
